# aiidalab-widgets-empa

./: pyproject.toml
.github/workflows/: ci.yml  publish.yml
aiidalab_widgets_empa/: __init__.py  cdxml.py
tests/: 7AGNR.cdxml  benzene.cdxml  test_cdxml.py
